[package]
name = "ipset-management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1.0"
tokio = { version = "1.20.0", features = ["full"] }
anyhow = "1.0.68"
axum = "0.6.2"
axum-server = { version = "0.4.4", features = ["tls-rustls"] }
tower-http = { version = "0.3.5", features = ["cors"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
once_cell = "1.17.0"
env_logger = "0.10.0"
log = "0.4.17"
regex = "1.7.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"